Update generated content

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Điều gì xảy ra nếu ngưng thở khi ngủ kéo dài?",
+    "content": "Ngưng thở khi ngủ kéo dài có thể dẫn đến nhiều vấn đề sức khỏe nghiêm trọng. Người mắc chứng này thường cảm thấy mệt mỏi, buồn ngủ vào ban ngày và có nguy cơ cao mắc bệnh tim, huyết áp cao, hoặc đột quỵ. Tình trạng này có thể làm suy yếu hệ miễn dịch, tăng nguy cơ mắc hội chứng chuyển hóa và ảnh hưởng đến sức khỏe tâm thần. Nếu không được kiểm soát, ngưng thở khi ngủ có thể gây ra các biến chứng nghiêm trọng về sức khỏe.",
+    "link": "https://vnexpress.net/dieu-gi-xay-ra-neu-ngung-tho-khi-ngu-keo-dai-4860762.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 9,
+    "question": "Ngưng thở khi ngủ kéo dài có thể gây ra những vấn đề sức khỏe nào?",
+    "answers": [
+      {
+        "text": "Mệt mỏi, buồn ngủ ban ngày và tăng nguy cơ bệnh tim",
+        "correct": true
+      },
+      {
+        "text": "Chỉ gây ra triệu chứng nhẹ và không nghiêm trọng",
+        "correct": false
+      },
+      {
+        "text": "Không có tác động đến sức khỏe",
+        "correct": false
+      },
+      {
+        "text": "Chỉ ảnh hưởng đến giấc ngủ mà thôi",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Giá xăng dầu tiếp tục giảm sâu, RON95 về mức dưới 20.000 đồng/lít",
     "content": "Giá xăng dầu tại Việt Nam đã giảm mạnh trong đợt điều chỉnh mới nhất vào chiều ngày 12-3, với xăng RON 95 giảm về mức 19.649 đồng/lít, giảm 753 đồng/lít so với trước đó. Xăng E5 RON 92 cũng giảm xuống 19.281 đồng/lít. Nguyên nhân của sự giảm giá này được cho là do ảnh hưởng từ thị trường xăng dầu thế giới và quyết định không trích lập quỹ bình ổn giá. Đây là mức giá thấp nhất của xăng RON 95 trong hơn 3 năm qua.",
     "link": "https://tuoitre.vn/gia-xang-dau-tiep-tuc-giam-sau-ron95-ve-muc-duoi-20-000-dong-lit-20250313145016829.htm",
@@ -1937,6 +1964,33 @@
     ]
   },
   {
+    "title": "Sản phụ mắc bệnh xương hóa đá hiếm gặp vượt cạn an toàn",
+    "content": "Chị Đinh Thanh Hương, 32 tuổi, mắc bệnh xương hóa đá hiếm gặp với tỷ lệ 1/200.000 người, đã vượt cạn an toàn nhờ sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc. Bệnh xương hóa đá khiến chị đối mặt với nhiều nguy cơ trong thai kỳ, nhưng nhờ vào kế hoạch chăm sóc cẩn thận và tư vấn tận tình, chị đã có một ca sinh nở thành công. Các bác sĩ đã thực hiện ca mổ với sự chính xác để đảm bảo an toàn cho cả mẹ và bé.",
+    "link": "https://vnexpress.net/san-phu-mac-benh-xuong-hoa-da-hiem-gap-vuot-can-an-toan-4859942.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Chị Đinh Thanh Hương đã vượt cạn an toàn nhờ vào đâu?",
+    "answers": [
+      {
+        "text": "Sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc.",
+        "correct": true
+      },
+      {
+        "text": "Sự động viên từ gia đình.",
+        "correct": false
+      },
+      {
+        "text": "Chế độ dinh dưỡng hợp lý.",
+        "correct": false
+      },
+      {
+        "text": "Nhờ vào thuốc giảm đau hiệu quả.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nồm ẩm làm tăng nguy cơ nhồi máu cơ tim",
     "content": "Thời tiết nồm ẩm có thể làm tăng nguy cơ nhồi máu cơ tim do ảnh hưởng đến sức khỏe tim mạch. Bác sĩ Nguyễn Tuấn Long cho biết, độ ẩm cao làm cơ thể phải làm việc nhiều hơn để duy trì nhiệt độ, dẫn đến căng thẳng cho hệ tim mạch. Số bệnh nhân nhồi máu cơ tim tại Bệnh viện Đa khoa Tâm Anh Hà Nội trong tháng 2 tăng gần 30% so với cùng kỳ năm ngoái, đặc biệt là ở những người có bệnh lý nền hoặc tuổi cao. Để giảm thiểu rủi ro, cần chú ý giữ ấm cơ thể và duy trì lối sống lành mạnh.",
     "link": "https://vnexpress.net/nom-am-lam-tang-nguy-co-nhoi-mau-co-tim-4860624.html",
@@ -1963,33 +2017,6 @@
       },
       {
         "text": "Nồm ẩm chỉ ảnh hưởng đến hệ hô hấp.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Sản phụ mắc bệnh xương hóa đá hiếm gặp vượt cạn an toàn",
-    "content": "Chị Đinh Thanh Hương, 32 tuổi, mắc bệnh xương hóa đá hiếm gặp với tỷ lệ 1/200.000 người, đã vượt cạn an toàn nhờ sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc. Bệnh xương hóa đá khiến chị đối mặt với nhiều nguy cơ trong thai kỳ, nhưng nhờ vào kế hoạch chăm sóc cẩn thận và tư vấn tận tình, chị đã có một ca sinh nở thành công. Các bác sĩ đã thực hiện ca mổ với sự chính xác để đảm bảo an toàn cho cả mẹ và bé.",
-    "link": "https://vnexpress.net/san-phu-mac-benh-xuong-hoa-da-hiem-gap-vuot-can-an-toan-4859942.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Chị Đinh Thanh Hương đã vượt cạn an toàn nhờ vào đâu?",
-    "answers": [
-      {
-        "text": "Sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc.",
-        "correct": true
-      },
-      {
-        "text": "Sự động viên từ gia đình.",
-        "correct": false
-      },
-      {
-        "text": "Chế độ dinh dưỡng hợp lý.",
-        "correct": false
-      },
-      {
-        "text": "Nhờ vào thuốc giảm đau hiệu quả.",
         "correct": false
       }
     ]
@@ -2416,33 +2443,6 @@
     ]
   },
   {
-    "title": "Bỏ tập gym vì bị PT 'chèo kéo'",
-    "content": "Chị Ánh, 43 tuổi, đã bỏ tập gym sau khi bị huấn luyện viên cá nhân (PT) chèo kéo mua thực phẩm chức năng với giá cao, gây ức chế cho chị. Mặc dù đã chi hơn 50 triệu đồng cho gói tập, nhưng những lần áp lực mua hàng từ PT đã khiến chị quyết định ngừng tập luyện. Tình trạng tương tự cũng xảy ra với nhiều khách hàng khác, dẫn đến việc họ cảm thấy phiền phức và không hài lòng với dịch vụ. Các bác sĩ khuyến cáo rằng việc dùng thực phẩm chức năng không thể thay thế chế độ ăn uống và lối sống lành mạnh, và người tiêu dùng cần cẩn trọng khi chọn mua sản phẩm và dịch vụ.",
-    "link": "https://vnexpress.net/bo-tap-gym-vi-bi-pt-cheo-keo-4857898.html",
-    "cat": "suc-khoe",
-    "positivity": 2,
-    "importance": 7,
-    "question": "Tại sao chị Ánh quyết định bỏ tập gym?",
-    "answers": [
-      {
-        "text": "Vì bị PT chèo kéo mua thực phẩm chức năng",
-        "correct": true
-      },
-      {
-        "text": "Vì không thích tập luyện",
-        "correct": false
-      },
-      {
-        "text": "Vì sức khỏe không tốt",
-        "correct": false
-      },
-      {
-        "text": "Vì muốn tiết kiệm tiền",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Một ngày của cụ bà 97 tuổi mê chạy bộ",
     "content": "Cụ bà Nguyễn Thị Huynh, 97 tuổi, sống tại TP Hà Tĩnh, duy trì thói quen chạy bộ hai lần mỗi ngày. Hàng sáng, cụ dậy sớm để tập thể dục và ăn sáng đầy đủ trước khi tham gia các hoạt động khác. Dù tuổi cao, cụ vẫn tích cực tham gia các lớp thể dục tại phòng gym và thường xuyên chạy bộ quanh công viên. Cụ cũng được con cháu ghi lại những khoảnh khắc tập luyện và chia sẻ trên mạng xã hội, thu hút sự chú ý của nhiều người.",
     "link": "https://vnexpress.net/mot-ngay-cua-cu-ba-97-tuoi-me-chay-bo-4860200.html",
@@ -2469,6 +2469,33 @@
       },
       {
         "text": "92 tuổi",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bỏ tập gym vì bị PT 'chèo kéo'",
+    "content": "Chị Ánh, 43 tuổi, đã bỏ tập gym sau khi bị huấn luyện viên cá nhân (PT) chèo kéo mua thực phẩm chức năng với giá cao, gây ức chế cho chị. Mặc dù đã chi hơn 50 triệu đồng cho gói tập, nhưng những lần áp lực mua hàng từ PT đã khiến chị quyết định ngừng tập luyện. Tình trạng tương tự cũng xảy ra với nhiều khách hàng khác, dẫn đến việc họ cảm thấy phiền phức và không hài lòng với dịch vụ. Các bác sĩ khuyến cáo rằng việc dùng thực phẩm chức năng không thể thay thế chế độ ăn uống và lối sống lành mạnh, và người tiêu dùng cần cẩn trọng khi chọn mua sản phẩm và dịch vụ.",
+    "link": "https://vnexpress.net/bo-tap-gym-vi-bi-pt-cheo-keo-4857898.html",
+    "cat": "suc-khoe",
+    "positivity": 2,
+    "importance": 7,
+    "question": "Tại sao chị Ánh quyết định bỏ tập gym?",
+    "answers": [
+      {
+        "text": "Vì bị PT chèo kéo mua thực phẩm chức năng",
+        "correct": true
+      },
+      {
+        "text": "Vì không thích tập luyện",
+        "correct": false
+      },
+      {
+        "text": "Vì sức khỏe không tốt",
+        "correct": false
+      },
+      {
+        "text": "Vì muốn tiết kiệm tiền",
         "correct": false
       }
     ]
@@ -3397,6 +3424,33 @@
     ]
   },
   {
+    "title": "Ăn trứng khi mắc sốt xuất huyết có ảnh hưởng tiêu hóa?",
+    "content": "Trẻ mắc sốt xuất huyết có thể ăn trứng nhưng cần lưu ý đến tình trạng sức khỏe. Khi trẻ sốt cao, không nên cho trẻ ăn trứng vì hệ tiêu hóa có thể hoạt động kém và protein trong trứng có thể gây khó tiêu. Sau khi cơn sốt giảm và hệ tiêu hóa ổn định, trứng có thể được bổ sung vào chế độ ăn, nhưng cần chế biến cẩn thận và ăn vào buổi sáng để tốt cho tiêu hóa.",
+    "link": "https://vnexpress.net/an-trung-khi-mac-sot-xuat-huyet-co-anh-huong-tieu-hoa-4860513.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Có nên cho trẻ ăn trứng khi mắc sốt xuất huyết không?",
+    "answers": [
+      {
+        "text": "Có, nhưng chỉ khi trẻ không sốt cao.",
+        "correct": true
+      },
+      {
+        "text": "Không, tuyệt đối không nên cho ăn.",
+        "correct": false
+      },
+      {
+        "text": "Có, trẻ có thể ăn bất kỳ lúc nào.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ ăn trứng sống.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "9 năm vô sinh do không có tinh trùng",
     "content": "Anh Yeo, 51 tuổi, đã trải qua 9 năm vô sinh do không có tinh trùng và mới phát hiện nguyên nhân sau khi kết hôn. Sau khi khám tại Bệnh viện Đa khoa Tâm Anh TP HCM, anh được chẩn đoán với tình trạng teo tinh hoàn và được bác sĩ chỉ định điều trị bằng kỹ thuật micro-TESE để tìm tinh trùng. Kết quả là tìm thấy 15 tinh trùng, giúp anh và vợ thực hiện thụ tinh trong ống nghiệm và hiện tại họ đã có thai khoảng 8 tuần.",
     "link": "https://vnexpress.net/9-nam-vo-sinh-do-khong-co-tinh-trung-4860218.html",
@@ -3450,33 +3504,6 @@
       },
       {
         "text": "Tránh ăn rau quả hoàn toàn.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ăn trứng khi mắc sốt xuất huyết có ảnh hưởng tiêu hóa?",
-    "content": "Trẻ mắc sốt xuất huyết có thể ăn trứng nhưng cần lưu ý đến tình trạng sức khỏe. Khi trẻ sốt cao, không nên cho trẻ ăn trứng vì hệ tiêu hóa có thể hoạt động kém và protein trong trứng có thể gây khó tiêu. Sau khi cơn sốt giảm và hệ tiêu hóa ổn định, trứng có thể được bổ sung vào chế độ ăn, nhưng cần chế biến cẩn thận và ăn vào buổi sáng để tốt cho tiêu hóa.",
-    "link": "https://vnexpress.net/an-trung-khi-mac-sot-xuat-huyet-co-anh-huong-tieu-hoa-4860513.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Có nên cho trẻ ăn trứng khi mắc sốt xuất huyết không?",
-    "answers": [
-      {
-        "text": "Có, nhưng chỉ khi trẻ không sốt cao.",
-        "correct": true
-      },
-      {
-        "text": "Không, tuyệt đối không nên cho ăn.",
-        "correct": false
-      },
-      {
-        "text": "Có, trẻ có thể ăn bất kỳ lúc nào.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ ăn trứng sống.",
         "correct": false
       }
     ]
@@ -3880,6 +3907,37 @@
     ]
   },
   {
+    "title": "VinFast bán hơn 12.500 ôtô điện trong tháng 2",
+    "content": "VinFast đã bán được hơn 12.500 ôtô điện trong tháng 2, với mẫu VF 3 dẫn đầu doanh số 5.200 chiếc. Dù tháng 2 trùng với kỳ nghỉ Tết Nguyên đán, doanh số của VinFast vẫn tăng trưởng 20% so với tháng trước. Công ty hiện có 4 mẫu xe trong top 10 xe bán chạy nhất tại Việt Nam. VinFast đặt mục tiêu đạt doanh số toàn cầu 200.000 xe trong năm 2025.",
+    "link": "https://vnexpress.net/vinfast-ban-hon-12-500-oto-dien-trong-thang-2-4860465.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "VinFast đã bán được bao nhiêu ôtô điện trong tháng 2?",
+    "answers": [
+      {
+        "text": "Hơn 12.500 ôtô điện",
+        "correct": true
+      },
+      {
+        "text": "10.000 ôtô điện",
+        "correct": false
+      },
+      {
+        "text": "15.000 ôtô điện",
+        "correct": false
+      },
+      {
+        "text": "8.000 ôtô điện",
+        "correct": false
+      },
+      {
+        "text": "12.000 ôtô điện",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "9 loại rau quả làm mát cơ thể khi nắng nóng",
     "content": "Trong thời tiết nắng nóng, việc bổ sung nước và chất điện giải là rất quan trọng để duy trì sức khỏe. Bài viết giới thiệu 9 loại rau quả giúp làm mát cơ thể, bao gồm nước dừa, dưa hấu, dưa chuột, rau lá xanh, và cam quýt. Những thực phẩm này không chỉ giàu nước mà còn cung cấp nhiều vitamin và khoáng chất thiết yếu, giúp cơ thể cân bằng và phòng tránh các vấn đề sức khỏe do nhiệt độ cao.",
     "link": "https://vnexpress.net/9-loai-rau-qua-lam-mat-co-the-khi-nang-nong-4860366.html",
@@ -3929,37 +3987,6 @@
       },
       {
         "text": "Chỉ một số loại rau củ mới tốt cho não.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "VinFast bán hơn 12.500 ôtô điện trong tháng 2",
-    "content": "VinFast đã bán được hơn 12.500 ôtô điện trong tháng 2, với mẫu VF 3 dẫn đầu doanh số 5.200 chiếc. Dù tháng 2 trùng với kỳ nghỉ Tết Nguyên đán, doanh số của VinFast vẫn tăng trưởng 20% so với tháng trước. Công ty hiện có 4 mẫu xe trong top 10 xe bán chạy nhất tại Việt Nam. VinFast đặt mục tiêu đạt doanh số toàn cầu 200.000 xe trong năm 2025.",
-    "link": "https://vnexpress.net/vinfast-ban-hon-12-500-oto-dien-trong-thang-2-4860465.html",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "VinFast đã bán được bao nhiêu ôtô điện trong tháng 2?",
-    "answers": [
-      {
-        "text": "Hơn 12.500 ôtô điện",
-        "correct": true
-      },
-      {
-        "text": "10.000 ôtô điện",
-        "correct": false
-      },
-      {
-        "text": "15.000 ôtô điện",
-        "correct": false
-      },
-      {
-        "text": "8.000 ôtô điện",
-        "correct": false
-      },
-      {
-        "text": "12.000 ôtô điện",
         "correct": false
       }
     ]
@@ -4432,37 +4459,6 @@
       },
       {
         "text": "Phát triển du lịch biển",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bình chọn cá nhân tiêu biểu đóng góp xây dựng, phát triển TP HCM",
-    "content": "TP HCM đang tiến hành bình chọn 50 cá nhân tiêu biểu có đóng góp vào sự nghiệp xây dựng, bảo vệ và phát triển thành phố nhân dịp kỷ niệm 50 năm thống nhất đất nước. Hội nghị lấy ý kiến xét chọn đã diễn ra vào ngày 12/3/2025 với sự đề cử của 60 cá nhân từ nhiều lĩnh vực khác nhau như chính trị, xã hội, giáo dục và y tế. Các cá nhân tiêu biểu được đề cử bao gồm nhiều lãnh đạo và nhân vật nổi bật trong lịch sử và phát triển của thành phố.",
-    "link": "https://vnexpress.net/binh-chon-ca-nhan-tieu-bieu-dong-gop-xay-dung-phat-trien-tp-hcm-4860362.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Ai là những cá nhân tiêu biểu được đề cử trong bình chọn của TP HCM?",
-    "answers": [
-      {
-        "text": "Nguyên Tổng Bí thư Nguyễn Văn Linh",
-        "correct": true
-      },
-      {
-        "text": "Nguyên Chủ tịch Quốc hội Nguyễn Hữu Thọ",
-        "correct": false
-      },
-      {
-        "text": "Nguyên Thủ tướng Phan Văn Khải",
-        "correct": false
-      },
-      {
-        "text": "Nguyên Phó chủ tịch nước Trương Mỹ Hoa",
-        "correct": false
-      },
-      {
-        "text": "Nguyên giám đốc Bệnh viện Từ Dũ Nguyễn Thị Ngọc Phượng",
         "correct": false
       }
     ]
