Update generated content

--- a/home.html
+++ b/home.html
@@ -237,6 +237,37 @@
     ]
   },
   {
+    "title": "ENT Masterclass lần đầu đào tạo tai mũi họng và phẫu thuật cổ tại Việt Nam",
+    "content": "Hội nghị ENT Masterclass lần đầu tiên được tổ chức tại Việt Nam sẽ diễn ra vào ngày 31/3 và 1/4 tại Bệnh viện Đa khoa Hồng Ngọc. Sự kiện này quy tụ 33 bài báo cáo chuyên sâu về tai mũi họng và phẫu thuật cổ, với sự tham gia của các chuyên gia hàng đầu quốc tế và trong nước. Mục tiêu của hội nghị là nâng cao trình độ chuyên môn cho các bác sĩ Việt Nam và kết nối cộng đồng y khoa toàn cầu.",
+    "link": "https://vnexpress.net/ent-masterclass-lan-dau-dao-tao-tai-mui-hong-va-phau-thuat-co-tai-viet-nam-4860526.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Hội nghị ENT Masterclass tại Việt Nam diễn ra vào ngày nào?",
+    "answers": [
+      {
+        "text": "31/3 và 1/4",
+        "correct": true
+      },
+      {
+        "text": "1/3 và 2/4",
+        "correct": false
+      },
+      {
+        "text": "30/3 và 1/4",
+        "correct": false
+      },
+      {
+        "text": "31/4 và 1/5",
+        "correct": false
+      },
+      {
+        "text": "29/3 và 30/3",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Điều gì xảy ra nếu ngưng thở khi ngủ kéo dài?",
     "content": "Ngưng thở khi ngủ kéo dài có thể dẫn đến nhiều vấn đề sức khỏe nghiêm trọng. Người mắc chứng này thường cảm thấy mệt mỏi, buồn ngủ vào ban ngày và có nguy cơ cao mắc bệnh tim, huyết áp cao, hoặc đột quỵ. Tình trạng này có thể làm suy yếu hệ miễn dịch, tăng nguy cơ mắc hội chứng chuyển hóa và ảnh hưởng đến sức khỏe tâm thần. Nếu không được kiểm soát, ngưng thở khi ngủ có thể gây ra các biến chứng nghiêm trọng về sức khỏe.",
     "link": "https://vnexpress.net/dieu-gi-xay-ra-neu-ngung-tho-khi-ngu-keo-dai-4860762.html",
@@ -608,33 +639,6 @@
     ]
   },
   {
-    "title": "Đau khớp háng có nên đi bộ?",
-    "content": "Đau khớp háng là vấn đề phổ biến ở người lớn tuổi, đặc biệt là những người bị thoái hóa khớp hoặc viêm khớp. Mặc dù nhiều người lo lắng rằng đi bộ có thể làm tăng cơn đau, nhưng nếu thực hiện đúng cách, đi bộ có thể mang lại nhiều lợi ích cho khớp háng và sức khỏe tổng thể. Đi bộ kích thích sản xuất dịch khớp, giúp khớp hoạt động linh hoạt hơn và hạn chế tình trạng cứng khớp. Tuy nhiên, nếu có các triệu chứng như đau dữ dội hoặc sưng, người bệnh nên ngừng đi bộ và tham khảo ý kiến bác sĩ.",
-    "link": "https://vnexpress.net/dau-khop-hang-co-nen-di-bo-4860837.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Đau khớp háng có nên đi bộ không?",
-    "answers": [
-      {
-        "text": "Có, đi bộ đúng cách có thể cải thiện triệu chứng.",
-        "correct": true
-      },
-      {
-        "text": "Không, đi bộ làm tình trạng bệnh nặng hơn.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ nên đi bộ trên địa hình bằng phẳng.",
-        "correct": false
-      },
-      {
-        "text": "Không, đi bộ không có tác dụng gì đối với khớp háng.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Làm thế nào nhận biết rối loạn tiền đình?",
     "content": "Rối loạn tiền đình là tình trạng liên quan đến thăng bằng, gây ra triệu chứng như choáng váng, hoa mắt. Các triệu chứng này có thể là dấu hiệu của nhiều bệnh khác nhau, bao gồm tim mạch và stress. Để chẩn đoán chính xác, người bệnh nên thăm khám tại bệnh viện chuyên khoa, nơi bác sĩ sẽ sử dụng công nghệ hiện đại như hệ thống Interacoustics để kiểm tra và xác định nguyên nhân gây ra tình trạng này.",
     "link": "https://vnexpress.net/lam-the-nao-nhan-biet-roi-loan-tien-dinh-4860719.html",
@@ -657,6 +661,33 @@
       },
       {
         "text": "Chỉ cần nghỉ ngơi và không làm gì cả.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đau khớp háng có nên đi bộ?",
+    "content": "Đau khớp háng là vấn đề phổ biến ở người lớn tuổi, đặc biệt là những người bị thoái hóa khớp hoặc viêm khớp. Mặc dù nhiều người lo lắng rằng đi bộ có thể làm tăng cơn đau, nhưng nếu thực hiện đúng cách, đi bộ có thể mang lại nhiều lợi ích cho khớp háng và sức khỏe tổng thể. Đi bộ kích thích sản xuất dịch khớp, giúp khớp hoạt động linh hoạt hơn và hạn chế tình trạng cứng khớp. Tuy nhiên, nếu có các triệu chứng như đau dữ dội hoặc sưng, người bệnh nên ngừng đi bộ và tham khảo ý kiến bác sĩ.",
+    "link": "https://vnexpress.net/dau-khop-hang-co-nen-di-bo-4860837.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Đau khớp háng có nên đi bộ không?",
+    "answers": [
+      {
+        "text": "Có, đi bộ đúng cách có thể cải thiện triệu chứng.",
+        "correct": true
+      },
+      {
+        "text": "Không, đi bộ làm tình trạng bệnh nặng hơn.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ nên đi bộ trên địa hình bằng phẳng.",
+        "correct": false
+      },
+      {
+        "text": "Không, đi bộ không có tác dụng gì đối với khớp háng.",
         "correct": false
       }
     ]
@@ -2053,6 +2084,33 @@
     ]
   },
   {
+    "title": "Sản phụ mắc bệnh xương hóa đá hiếm gặp vượt cạn an toàn",
+    "content": "Chị Đinh Thanh Hương, 32 tuổi, mắc bệnh xương hóa đá hiếm gặp với tỷ lệ 1/200.000 người, đã vượt cạn an toàn nhờ sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc. Bệnh xương hóa đá khiến chị đối mặt với nhiều nguy cơ trong thai kỳ, nhưng nhờ vào kế hoạch chăm sóc cẩn thận và tư vấn tận tình, chị đã có một ca sinh nở thành công. Các bác sĩ đã thực hiện ca mổ với sự chính xác để đảm bảo an toàn cho cả mẹ và bé.",
+    "link": "https://vnexpress.net/san-phu-mac-benh-xuong-hoa-da-hiem-gap-vuot-can-an-toan-4859942.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Chị Đinh Thanh Hương đã vượt cạn an toàn nhờ vào đâu?",
+    "answers": [
+      {
+        "text": "Sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc.",
+        "correct": true
+      },
+      {
+        "text": "Sự động viên từ gia đình.",
+        "correct": false
+      },
+      {
+        "text": "Chế độ dinh dưỡng hợp lý.",
+        "correct": false
+      },
+      {
+        "text": "Nhờ vào thuốc giảm đau hiệu quả.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nồm ẩm làm tăng nguy cơ nhồi máu cơ tim",
     "content": "Thời tiết nồm ẩm có thể làm tăng nguy cơ nhồi máu cơ tim do ảnh hưởng đến sức khỏe tim mạch. Bác sĩ Nguyễn Tuấn Long cho biết, độ ẩm cao làm cơ thể phải làm việc nhiều hơn để duy trì nhiệt độ, dẫn đến căng thẳng cho hệ tim mạch. Số bệnh nhân nhồi máu cơ tim tại Bệnh viện Đa khoa Tâm Anh Hà Nội trong tháng 2 tăng gần 30% so với cùng kỳ năm ngoái, đặc biệt là ở những người có bệnh lý nền hoặc tuổi cao. Để giảm thiểu rủi ro, cần chú ý giữ ấm cơ thể và duy trì lối sống lành mạnh.",
     "link": "https://vnexpress.net/nom-am-lam-tang-nguy-co-nhoi-mau-co-tim-4860624.html",
@@ -2079,33 +2137,6 @@
       },
       {
         "text": "Nồm ẩm chỉ ảnh hưởng đến hệ hô hấp.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Sản phụ mắc bệnh xương hóa đá hiếm gặp vượt cạn an toàn",
-    "content": "Chị Đinh Thanh Hương, 32 tuổi, mắc bệnh xương hóa đá hiếm gặp với tỷ lệ 1/200.000 người, đã vượt cạn an toàn nhờ sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc. Bệnh xương hóa đá khiến chị đối mặt với nhiều nguy cơ trong thai kỳ, nhưng nhờ vào kế hoạch chăm sóc cẩn thận và tư vấn tận tình, chị đã có một ca sinh nở thành công. Các bác sĩ đã thực hiện ca mổ với sự chính xác để đảm bảo an toàn cho cả mẹ và bé.",
-    "link": "https://vnexpress.net/san-phu-mac-benh-xuong-hoa-da-hiem-gap-vuot-can-an-toan-4859942.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Chị Đinh Thanh Hương đã vượt cạn an toàn nhờ vào đâu?",
-    "answers": [
-      {
-        "text": "Sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc.",
-        "correct": true
-      },
-      {
-        "text": "Sự động viên từ gia đình.",
-        "correct": false
-      },
-      {
-        "text": "Chế độ dinh dưỡng hợp lý.",
-        "correct": false
-      },
-      {
-        "text": "Nhờ vào thuốc giảm đau hiệu quả.",
         "correct": false
       }
     ]
@@ -2532,33 +2563,6 @@
     ]
   },
   {
-    "title": "Bỏ tập gym vì bị PT 'chèo kéo'",
-    "content": "Chị Ánh, 43 tuổi, đã bỏ tập gym sau khi bị huấn luyện viên cá nhân (PT) chèo kéo mua thực phẩm chức năng với giá cao, gây ức chế cho chị. Mặc dù đã chi hơn 50 triệu đồng cho gói tập, nhưng những lần áp lực mua hàng từ PT đã khiến chị quyết định ngừng tập luyện. Tình trạng tương tự cũng xảy ra với nhiều khách hàng khác, dẫn đến việc họ cảm thấy phiền phức và không hài lòng với dịch vụ. Các bác sĩ khuyến cáo rằng việc dùng thực phẩm chức năng không thể thay thế chế độ ăn uống và lối sống lành mạnh, và người tiêu dùng cần cẩn trọng khi chọn mua sản phẩm và dịch vụ.",
-    "link": "https://vnexpress.net/bo-tap-gym-vi-bi-pt-cheo-keo-4857898.html",
-    "cat": "suc-khoe",
-    "positivity": 2,
-    "importance": 7,
-    "question": "Tại sao chị Ánh quyết định bỏ tập gym?",
-    "answers": [
-      {
-        "text": "Vì bị PT chèo kéo mua thực phẩm chức năng",
-        "correct": true
-      },
-      {
-        "text": "Vì không thích tập luyện",
-        "correct": false
-      },
-      {
-        "text": "Vì sức khỏe không tốt",
-        "correct": false
-      },
-      {
-        "text": "Vì muốn tiết kiệm tiền",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Một ngày của cụ bà 97 tuổi mê chạy bộ",
     "content": "Cụ bà Nguyễn Thị Huynh, 97 tuổi, sống tại TP Hà Tĩnh, duy trì thói quen chạy bộ hai lần mỗi ngày. Hàng sáng, cụ dậy sớm để tập thể dục và ăn sáng đầy đủ trước khi tham gia các hoạt động khác. Dù tuổi cao, cụ vẫn tích cực tham gia các lớp thể dục tại phòng gym và thường xuyên chạy bộ quanh công viên. Cụ cũng được con cháu ghi lại những khoảnh khắc tập luyện và chia sẻ trên mạng xã hội, thu hút sự chú ý của nhiều người.",
     "link": "https://vnexpress.net/mot-ngay-cua-cu-ba-97-tuoi-me-chay-bo-4860200.html",
@@ -2585,6 +2589,33 @@
       },
       {
         "text": "92 tuổi",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bỏ tập gym vì bị PT 'chèo kéo'",
+    "content": "Chị Ánh, 43 tuổi, đã bỏ tập gym sau khi bị huấn luyện viên cá nhân (PT) chèo kéo mua thực phẩm chức năng với giá cao, gây ức chế cho chị. Mặc dù đã chi hơn 50 triệu đồng cho gói tập, nhưng những lần áp lực mua hàng từ PT đã khiến chị quyết định ngừng tập luyện. Tình trạng tương tự cũng xảy ra với nhiều khách hàng khác, dẫn đến việc họ cảm thấy phiền phức và không hài lòng với dịch vụ. Các bác sĩ khuyến cáo rằng việc dùng thực phẩm chức năng không thể thay thế chế độ ăn uống và lối sống lành mạnh, và người tiêu dùng cần cẩn trọng khi chọn mua sản phẩm và dịch vụ.",
+    "link": "https://vnexpress.net/bo-tap-gym-vi-bi-pt-cheo-keo-4857898.html",
+    "cat": "suc-khoe",
+    "positivity": 2,
+    "importance": 7,
+    "question": "Tại sao chị Ánh quyết định bỏ tập gym?",
+    "answers": [
+      {
+        "text": "Vì bị PT chèo kéo mua thực phẩm chức năng",
+        "correct": true
+      },
+      {
+        "text": "Vì không thích tập luyện",
+        "correct": false
+      },
+      {
+        "text": "Vì sức khỏe không tốt",
+        "correct": false
+      },
+      {
+        "text": "Vì muốn tiết kiệm tiền",
         "correct": false
       }
     ]
@@ -3513,33 +3544,6 @@
     ]
   },
   {
-    "title": "Người bệnh suy giáp nên giảm cân thế nào",
-    "content": "Người bệnh suy giáp có thể giảm cân bằng cách tăng cường chất xơ, ưu tiên ăn nhiều trái cây và chọn protein cùng chất béo lành mạnh. Suy giáp làm chậm quá trình trao đổi chất, khiến việc giảm cân trở nên khó khăn hơn. Bổ sung chất xơ và rau quả không chỉ hỗ trợ giảm cân mà còn giúp duy trì sức khỏe tuyến giáp. Thêm vào đó, tập thể dục thường xuyên, ngủ đủ giấc và ăn uống lành mạnh đóng vai trò quan trọng trong quá trình giảm cân của người bệnh.",
-    "link": "https://vnexpress.net/nguoi-benh-suy-giap-nen-giam-can-the-nao-4860368.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Người bệnh suy giáp nên giảm cân bằng cách nào?",
-    "answers": [
-      {
-        "text": "Tăng cường chất xơ và ăn nhiều trái cây.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ ăn thịt đỏ.",
-        "correct": false
-      },
-      {
-        "text": "Ngủ ít hơn 7 tiếng mỗi đêm.",
-        "correct": false
-      },
-      {
-        "text": "Tránh ăn rau quả hoàn toàn.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "9 năm vô sinh do không có tinh trùng",
     "content": "Anh Yeo, 51 tuổi, đã trải qua 9 năm vô sinh do không có tinh trùng và mới phát hiện nguyên nhân sau khi kết hôn. Sau khi khám tại Bệnh viện Đa khoa Tâm Anh TP HCM, anh được chẩn đoán với tình trạng teo tinh hoàn và được bác sĩ chỉ định điều trị bằng kỹ thuật micro-TESE để tìm tinh trùng. Kết quả là tìm thấy 15 tinh trùng, giúp anh và vợ thực hiện thụ tinh trong ống nghiệm và hiện tại họ đã có thai khoảng 8 tuần.",
     "link": "https://vnexpress.net/9-nam-vo-sinh-do-khong-co-tinh-trung-4860218.html",
@@ -3566,6 +3570,33 @@
       },
       {
         "text": "Vấn đề tâm lý",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Người bệnh suy giáp nên giảm cân thế nào",
+    "content": "Người bệnh suy giáp có thể giảm cân bằng cách tăng cường chất xơ, ưu tiên ăn nhiều trái cây và chọn protein cùng chất béo lành mạnh. Suy giáp làm chậm quá trình trao đổi chất, khiến việc giảm cân trở nên khó khăn hơn. Bổ sung chất xơ và rau quả không chỉ hỗ trợ giảm cân mà còn giúp duy trì sức khỏe tuyến giáp. Thêm vào đó, tập thể dục thường xuyên, ngủ đủ giấc và ăn uống lành mạnh đóng vai trò quan trọng trong quá trình giảm cân của người bệnh.",
+    "link": "https://vnexpress.net/nguoi-benh-suy-giap-nen-giam-can-the-nao-4860368.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Người bệnh suy giáp nên giảm cân bằng cách nào?",
+    "answers": [
+      {
+        "text": "Tăng cường chất xơ và ăn nhiều trái cây.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ ăn thịt đỏ.",
+        "correct": false
+      },
+      {
+        "text": "Ngủ ít hơn 7 tiếng mỗi đêm.",
+        "correct": false
+      },
+      {
+        "text": "Tránh ăn rau quả hoàn toàn.",
         "correct": false
       }
     ]
@@ -4463,64 +4494,6 @@
       },
       {
         "text": "Khám sức khỏe định kỳ",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Giáo án sub2 và sub2:30 bán marathon trong 3 tuần",
-    "content": "Giáo án sub2 và sub2:30 bán marathon trong 3 tuần cung cấp kế hoạch tập luyện cho các runner muốn đạt thành tích nhanh chóng. Mục tiêu cho sub2 là duy trì pace 5:40 - 5:45, trong khi sub2:30 yêu cầu pace 7:00 - 7:05 trong suốt cự ly 21,1 km. Các runner cần tuân thủ một quy trình huấn luyện nghiêm ngặt, bao gồm các bài tập interval và tempo để cải thiện tốc độ và sức bền, đồng thời cần tham khảo ý kiến từ huấn luyện viên để cá nhân hóa giáo án.",
-    "link": "https://vnexpress.net/giao-an-sub2-va-sub2-30-ban-marathon-trong-3-tuan-4860249.html",
-    "cat": "the-thao",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Giáo án sub2 và sub2:30 bán marathon trong 3 tuần có mục tiêu gì?",
-    "answers": [
-      {
-        "text": "Đạt thành tích sub2 và sub2:30 trong bán marathon",
-        "correct": true
-      },
-      {
-        "text": "Tăng cường sức bền cho chạy marathon",
-        "correct": false
-      },
-      {
-        "text": "Giảm thời gian tập luyện dưới 2 tuần",
-        "correct": false
-      },
-      {
-        "text": "Chạy marathon trong thời gian ít hơn 3 tuần",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "HPV ở nam giới",
-    "content": "Virus HPV có thể gây ra các triệu chứng như mụn cóc sinh dục ở nam giới, mặc dù nhiều người không có triệu chứng nào. Có hơn 100 chủng HPV, trong đó 40 chủng lây truyền qua đường tình dục và có thể dẫn đến ung thư nếu không được phát hiện và điều trị kịp thời. Nam giới có nguy cơ cao hơn nếu họ có quan hệ tình dục đồng tính hoặc hệ miễn dịch yếu. Vắc xin và các biện pháp bảo vệ là cần thiết để phòng ngừa nhiễm HPV.",
-    "link": "https://vnexpress.net/hpv-o-nam-gioi-4860229.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "HPV có thể gây ra triệu chứng gì ở nam giới?",
-    "answers": [
-      {
-        "text": "Mụn cóc sinh dục",
-        "correct": true
-      },
-      {
-        "text": "Đau đầu",
-        "correct": false
-      },
-      {
-        "text": "Sốt cao",
-        "correct": false
-      },
-      {
-        "text": "Khó thở",
-        "correct": false
-      },
-      {
-        "text": "Chảy máu mũi",
         "correct": false
       }
     ]
